--- a/articles.html
+++ b/articles.html
@@ -3,62 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wings Media</title>
+  <title>Articles | WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="fade-out">
-
-  <!-- Header -->
-  <header class="black-bar">
-    <a href="index.html" class="logo">🕊️</a>
+<body>
+  <header class="navbar">
+    <div class="logo" onclick="goHome()">Wings<span>Media</span></div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Podcasts</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="articles.html" class="active">Articles</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <!-- Main Content (Replace this section in each page) -->
-  <main>
-    <main>
-  <section class="hero">
-    <h1>Articles & Essays</h1>
-    <p>Explore thought-provoking content from our creators — on Medium, LinkedIn, and more.</p>
-  </section>
+  <main class="fade-in">
+    <section class="hero">
+      <h1>Explore Our Articles</h1>
+      <p>Deep dives, thoughts, and stories by the WingsMedia creators.</p>
+    </section>
 
-  <section class="features">
-    <div class="feature"><h2>✍️ Medium</h2><p><a href="#" target="_blank">Check out our long-form content on Medium</a>.</p></div>
-    <div class="feature"><h2>🔗 LinkedIn</h2><p><a href="https://linkedin.com/in/akhilesh-v-s-564546236" target="_blank">Follow our team on LinkedIn</a> for updates and reflections.</p></div>
-    <div class="feature"><h2>📬 Substack</h2><p><a href="#" target="_blank">Subscribe to Wings Dispatch</a> for premium content directly to your inbox.</p></div>
-  </section>
-</main>
+    <section class="features">
+      <div class="card">
+        <h2>Design Thinking in Tech</h2>
+        <p>Published on Medium by Akhilesh - Read about innovation meets usability.</p>
+      </div>
+      <div class="card">
+        <h2>AI and the Future</h2>
+        <p>Published on LinkedIn by Navaneet - The world of generative AI simplified.</p>
+      </div>
+      <div class="card">
+        <h2>Reimagining Education</h2>
+        <p>Published on Substack by Gowtham - A look into the modern learning curve.</p>
+      </div>
+    </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="black-bar">
-    <p>&copy; 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
+  <footer class="footer">
+    <p>© 2025 WingsMedia. Built by creators for creators.</p>
   </footer>
 
-  <!-- Transitions -->
   <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      document.body.classList.remove("fade-out");
-    });
-
-    document.querySelectorAll("a").forEach(link => {
-      if (!link.href.startsWith("#")) {
-        link.addEventListener("click", e => {
-          e.preventDefault();
-          document.body.classList.add("fade-out");
-          setTimeout(() => {
-            window.location = link.href;
-          }, 300);
-        });
-      }
-    });
+    function goHome() {
+      window.location.href = 'index.html';
+    }
   </script>
-
 </body>
 </html>
