--- a/index.html
+++ b/index.html
@@ -4,48 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WingsMedia</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">🕊️ WINGSMEDIA</div>
-      <ul class="nav-links">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Latest Releases</a></li>
-        <li><a href="#">Podcasts</a></li>
-        <li><a href="#">Articles</a></li>
-        <li><a href="#">Connect With Us</a></li>
-      </ul>
+
+  <!-- Navigation Bar -->
+  <header class="navbar">
+    <div class="logo" onclick="location.href='index.html'">WingsMedia</div>
+    <nav class="nav-links">
+      <a href="about.html">About</a>
+      <a href="releases.html">Releases</a>
+      <a href="podcasts.html">Podcasts</a>
+      <a href="articles.html">Articles</a>
+      <a href="contact.html">Connect</a>
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
-    <div class="bubbles"></div>
+    <div class="hero-bg"></div>
     <div class="hero-content">
-      <h1>Let Your Ideas Take Flight</h1>
-      <p>WingsMedia is a youth-powered media revolution — bringing bold voices, fresh takes, and fearless narratives to life.</p>
+      <h1 class="typewriter">Let Your Ideas Take Flight ✈️</h1>
+      <p>WingsMedia is a youth-driven creative media network — giving voice to stories, podcasts, and insights that inspire the world.</p>
+      <div class="scroll-indicator">
+        <span>Scroll Down</span>
+        <div class="mouse"><div class="wheel"></div></div>
+      </div>
     </div>
   </section>
 
-  <section class="latest">
+  <!-- Latest Releases -->
+  <section class="section">
     <h2>Latest Releases</h2>
-    <div class="card-container">
-      <div class="card" onclick="openAnimated('podcasts')">
-        <h3>🎙️ Podcasts</h3>
-        <p>Powerful, thought-provoking episodes for the free thinker.</p>
-      </div>
-      <div class="card" onclick="openAnimated('articles')">
-        <h3>📝 Articles</h3>
-        <p>Bold Ideas, challenging norms. Read our latest.</p>
-      </div>
+    <div class="cards">
+      <div class="card">🎙️ Podcast: "Aerospace Unplugged"</div>
+      <div class="card">📝 Article: "Engineering Dreams"</div>
     </div>
   </section>
 
-  <footer>
-    <p>© 2025 WingsMedia. All rights reserved. Powered by truth & freedom.</p>
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
