--- a/index.html
+++ b/index.html
@@ -2,51 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
 </head>
 <body>
+  <!-- Floating feather animation -->
+  <div class="feather-container">
+    <div class="feather feather1"></div>
+    <div class="feather feather2"></div>
+    <div class="feather feather3"></div>
+  </div>
 
-  <!-- Navigation Bar -->
-  <header class="navbar">
-    <div class="logo" onclick="location.href='index.html'">WingsMedia</div>
-    <nav class="nav-links">
+  <!-- Header -->
+  <header>
+    <div class="logo" onclick="window.location.href='index.html'">WingsMedia</div>
+    <nav>
       <a href="about.html">About</a>
-      <a href="releases.html">Releases</a>
-      <a href="podcasts.html">Podcasts</a>
       <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Podcasts</a>
       <a href="contact.html">Connect</a>
     </nav>
   </header>
 
   <!-- Hero Section -->
   <section class="hero">
-    <div class="hero-bg"></div>
-    <div class="hero-content">
-      <h1 class="typewriter">Let Your Ideas Take Flight ✈️</h1>
-      <p>WingsMedia is a youth-driven creative media network — giving voice to stories, podcasts, and insights that inspire the world.</p>
-      <div class="scroll-indicator">
-        <span>Scroll Down</span>
-        <div class="mouse"><div class="wheel"></div></div>
-      </div>
-    </div>
+    <h1>Welcome to WingsMedia</h1>
+    <p>Your creative sky for podcasts, thoughts, and more.</p>
   </section>
 
-  <!-- Latest Releases -->
-  <section class="section">
-    <h2>Latest Releases</h2>
+  <!-- Releases -->
+  <section class="releases">
+    <h2>Check Our Latest Releases</h2>
     <div class="cards">
-      <div class="card">🎙️ Podcast: "Aerospace Unplugged"</div>
-      <div class="card">📝 Article: "Engineering Dreams"</div>
+      <div class="card">🎙️ Podcast Episode 1</div>
+      <div class="card">📝 Article: Creative Future</div>
+      <div class="card">🎙️ Podcast: AudioVerse</div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="footer">
-    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+  <footer>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
