--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Floating feather animation -->
-  <div class="feather-container">
-    <div class="feather feather1"></div>
-    <div class="feather feather2"></div>
-    <div class="feather feather3"></div>
+
+  <!-- Floating Bubbles or Feathers Animation -->
+  <div class="animation-bg">
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
   </div>
 
   <!-- Header -->
   <header>
-    <div class="logo" onclick="window.location.href='index.html'">WingsMedia</div>
+    <div class="logo" onclick="window.location.href='index.html'">🕊️ WingsMedia</div>
     <nav>
       <a href="about.html">About</a>
       <a href="articles.html">Articles</a>
@@ -28,16 +29,16 @@
   <!-- Hero Section -->
   <section class="hero">
     <h1>Welcome to WingsMedia</h1>
-    <p>Your creative sky for podcasts, thoughts, and more.</p>
+    <p>Where Creativity Takes Flight 🚀</p>
   </section>
 
-  <!-- Releases -->
+  <!-- Latest Releases -->
   <section class="releases">
-    <h2>Check Our Latest Releases</h2>
+    <h2>Latest Releases</h2>
     <div class="cards">
-      <div class="card">🎙️ Podcast Episode 1</div>
-      <div class="card">📝 Article: Creative Future</div>
-      <div class="card">🎙️ Podcast: AudioVerse</div>
+      <div class="card">🎙️ Podcast: Start With Why</div>
+      <div class="card">📝 Article: Rise of Digital Stories</div>
+      <div class="card">🎙️ Podcast: Flight Mode</div>
     </div>
   </section>
 
@@ -45,5 +46,6 @@
   <footer>
     <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
