--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
         <h3>Purushothaman</h3>
         <p>Editor-in-Chief. Voice of truth and courage.</p>
       </div>
+      <section class="mission">
+  <h2>Vision & Mission</h2>
+  <div class="mission-boxes">
+    <div class="mission-box">
+      <h3>Our Vision</h3>
+      <p>To become a media voice that inspires truth, action, and purpose across generations.</p>
+    </div>
+    <div class="mission-box">
+      <h3>Our Mission</h3>
+      <p>We create content that sparks awareness, drives discussions, and empowers the youth to lead change.</p>
+    </div>
+    <div class="mission-box">
+      <h3>Our Values</h3>
+      <p>Freedom, Fearlessness, and Fact. We are committed to being bold, honest, and human.</p>
+    </div>
+  </div>
+</section>
       <div class="member-card">
         <img src="team2.jpg" alt="Member 2">
         <h3>Dinesh</h3>
