--- a/index.html
+++ b/index.html
@@ -1,101 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wings Media</title>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Section -->
+    <header>
+        <div class="logo">
+            <img src="path/to/logo.png" alt="Logo">
+        </div>
+    </header>
 
-  <!-- NAVIGATION BAR -->
-  <header class="navbar">
-    <div class="logo">🕊️ Wings Media</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Articles</a>
-      <a href="#">Podcasts</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+    <!-- Meet Our Team Section -->
+    <section id="team">
+        <div class="team-member">
+            <img src="path/to/image" alt="Purushothaman V">
+            <h3>Purushothaman V</h3>
+            <p>Role/Description</p>
+        </div>
+        <div class="team-member">
+            <img src="path/to/image" alt="Dinesh K">
+            <h3>Dinesh K</h3>
+            <p>Role/Description</p>
+        </div>
+        <div class="team-member">
+            <img src="path/to/image" alt="Gowtham Karuppiah">
+            <h3>Gowtham Karuppiah</h3>
+            <p>Role/Description</p>
+        </div>
+        <div class="team-member">
+            <img src="path/to/image" alt="Navaneet S V">
+            <h3>Navaneet S V</h3>
+            <p>Role/Description</p>
+        </div>
+        <div class="team-member">
+            <img src="path/to/image" alt="Akhilesh V S">
+            <h3>Akhilesh V S</h3>
+            <p>Role/Description</p>
+        </div>
+    </section>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <h1>Welcome to <span>Wings Media</span></h1>
-    <p class="tagline">Empowering thoughts, Redefining Perspectives.</p>
-  </section>
+    <!-- Other Content Sections Here -->
 
-  <!-- TEAM SECTION -->
-  <section class="team">
-    <h2>Meet Our Team</h2>
-    <div class="team-members">
-      <div class="member-card">
-        <img src="team1.jpg" alt="Member 1">
-        <h3>Purushothaman</h3>
-        <p>Editor-in-Chief. Voice of truth and courage.</p>
-      </div>
-      <section class="mission">
-  <h2>Vision & Mission</h2>
-  <div class="mission-boxes">
-    <div class="mission-box">
-      <h3>Our Vision</h3>
-      <p>To become a media voice that inspires truth, action, and purpose across generations.</p>
-    </div>
-    <div class="mission-box">
-      <h3>Our Mission</h3>
-      <p>We create content that sparks awareness, drives discussions, and empowers the youth to lead change.</p>
-    </div>
-    <div class="mission-box">
-      <h3>Our Values</h3>
-      <p>Freedom, Fearlessness, and Fact. We are committed to being bold, honest, and human.</p>
-    </div>
-  </div>
-</section>
-      <div class="member-card">
-        <img src="team2.jpg" alt="Member 2">
-        <h3>Dinesh</h3>
-        <p>Youth strategist. Thought-shaper of tomorrow.</p>
-      </div>
-      <!-- Add more members as needed -->
-    </div>
-  </section>
-
-  <!-- MISSION & VISION -->
-  <section class="mission">
-    <h2>Our Mission & Vision</h2>
-    <p>
-      At Wings Media, we empower voices, uplift ideas, and challenge norms.
-      We envision a future where every mind is free to express with impact.
-    </p>
-  </section>
-
-  <!-- NEW RELEASES -->
-  <section class="releases">
-    <h2>Check Out Our New Releases</h2>
-    <div class="cards">
-      <div class="card">🎙️ <strong>Freedom Voice</strong><br>Raw, bold political podcast.</div>
-      <div class="card">🧠 <strong>Youth Unfiltered</strong><br>Voices that inspire change.</div>
-      <div class="card">🌍 <strong>Ground Truth</strong><br>Real stories from real people.</div>
-    </div>
-  </section>
-
-  <!-- CONNECT WITH US -->
-  <section class="contact" id="contact">
-    <h2>Connect With Us</h2>
-    <form action="https://formspree.io/f/xwkgenby" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
-  </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
