--- a/index.html
+++ b/index.html
@@ -1,49 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Team Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="logo">
-            <img src="path/to/logo.png" alt="Logo">
-        </div>
-    </header>
 
-    <!-- Meet Our Team Section -->
-    <section id="team">
-        <div class="team-member">
-            <img src="path/to/image" alt="Purushothaman V">
-            <h3>Purushothaman V</h3>
-            <p>Role/Description</p>
-        </div>
-        <div class="team-member">
-            <img src="path/to/image" alt="Dinesh K">
-            <h3>Dinesh K</h3>
-            <p>Role/Description</p>
-        </div>
-        <div class="team-member">
-            <img src="path/to/image" alt="Gowtham Karuppiah">
-            <h3>Gowtham Karuppiah</h3>
-            <p>Role/Description</p>
-        </div>
-        <div class="team-member">
-            <img src="path/to/image" alt="Navaneet S V">
-            <h3>Navaneet S V</h3>
-            <p>Role/Description</p>
-        </div>
-        <div class="team-member">
-            <img src="path/to/image" alt="Akhilesh V S">
-            <h3>Akhilesh V S</h3>
-            <p>Role/Description</p>
-        </div>
-    </section>
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <img src="path/to/logo.png" alt="Logo">
+    </div>
+  </header>
 
-    <!-- Other Content Sections Here -->
+  <!-- Members Section -->
+  <section id="members">
+    <h2>Meet Our Team</h2>
+    <div class="team-container">
+      <div class="team-member">
+        <img src="path/to/image1.jpg" alt="Purushothaman V">
+        <h3>Purushothaman V</h3>
+        <p>Role / Description</p>
+      </div>
+      <div class="team-member">
+        <img src="path/to/image2.jpg" alt="Dinesh K">
+        <h3>Dinesh K</h3>
+        <p>Role / Description</p>
+      </div>
+      <div class="team-member">
+        <img src="path/to/image3.jpg" alt="Gowtham Karuppiah">
+        <h3>Gowtham Karuppiah</h3>
+        <p>Role / Description</p>
+      </div>
+      <div class="team-member">
+        <img src="path/to/image4.jpg" alt="Navaneet S V">
+        <h3>Navaneet S V</h3>
+        <p>Role / Description</p>
+      </div>
+      <div class="team-member">
+        <img src="path/to/image5.jpg" alt="Akhilesh V S">
+        <h3>Akhilesh V S</h3>
+        <p>Role / Description</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Mission & Vision Section -->
+  <section id="mission-vision">
+    <h2>Our Mission & Vision</h2>
+    <div class="mv-container">
+      <div class="mv-box">
+        <h3>Mission</h3>
+        <p>To inspire innovation and teamwork in solving real-world challenges through technology.</p>
+      </div>
+      <div class="mv-box">
+        <h3>Vision</h3>
+        <p>To be a leading force in tech-driven social transformation and sustainable development.</p>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
