--- a/index.html
+++ b/index.html
@@ -1,66 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team Website</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Wings Media</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <div class="logo">
-      <img src="path/to/logo.png" alt="Logo">
-    </div>
+  <!-- NAVIGATION BAR -->
+  <header class="navbar">
+    <div class="logo">🕊️ Wings Media</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Articles</a>
+      <a href="#">Podcasts</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
-  <!-- Members Section -->
-  <section id="members">
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1>Welcome to <span>Wings Media</span></h1>
+    <p class="tagline">Empowering thoughts, Redefining Perspectives.</p>
+  </section>
+
+  <!-- TEAM SECTION -->
+  <section class="team">
     <h2>Meet Our Team</h2>
-    <div class="team-container">
-      <div class="team-member">
-        <img src="path/to/image1.jpg" alt="Purushothaman V">
-        <h3>Purushothaman V</h3>
-        <p>Role / Description</p>
+    <div class="team-members">
+      <div class="member-card">
+        <img src="team1.jpg" alt="Member 1">
+        <h3>Purushothaman</h3>
+        <p>Editor-in-Chief. Voice of truth and courage.</p>
       </div>
-      <div class="team-member">
-        <img src="path/to/image2.jpg" alt="Dinesh K">
-        <h3>Dinesh K</h3>
-        <p>Role / Description</p>
+      <div class="member-card">
+        <img src="team2.jpg" alt="Member 2">
+        <h3>Dinesh</h3>
+        <p>Youth strategist. Thought-shaper of tomorrow.</p>
       </div>
-      <div class="team-member">
-        <img src="path/to/image3.jpg" alt="Gowtham Karuppiah">
-        <h3>Gowtham Karuppiah</h3>
-        <p>Role / Description</p>
-      </div>
-      <div class="team-member">
-        <img src="path/to/image4.jpg" alt="Navaneet S V">
-        <h3>Navaneet S V</h3>
-        <p>Role / Description</p>
-      </div>
-      <div class="team-member">
-        <img src="path/to/image5.jpg" alt="Akhilesh V S">
-        <h3>Akhilesh V S</h3>
-        <p>Role / Description</p>
-      </div>
+      <!-- Add more members as needed -->
     </div>
   </section>
 
-  <!-- Mission & Vision Section -->
-  <section id="mission-vision">
+  <!-- MISSION & VISION -->
+  <section class="mission">
     <h2>Our Mission & Vision</h2>
-    <div class="mv-container">
-      <div class="mv-box">
-        <h3>Mission</h3>
-        <p>To inspire innovation and teamwork in solving real-world challenges through technology.</p>
-      </div>
-      <div class="mv-box">
-        <h3>Vision</h3>
-        <p>To be a leading force in tech-driven social transformation and sustainable development.</p>
-      </div>
+    <p>
+      At Wings Media, we empower voices, uplift ideas, and challenge norms.
+      We envision a future where every mind is free to express with impact.
+    </p>
+  </section>
+
+  <!-- NEW RELEASES -->
+  <section class="releases">
+    <h2>Check Out Our New Releases</h2>
+    <div class="cards">
+      <div class="card">🎙️ <strong>Freedom Voice</strong><br>Raw, bold political podcast.</div>
+      <div class="card">🧠 <strong>Youth Unfiltered</strong><br>Voices that inspire change.</div>
+      <div class="card">🌍 <strong>Ground Truth</strong><br>Real stories from real people.</div>
     </div>
   </section>
 
+  <!-- CONNECT WITH US -->
+  <section class="contact" id="contact">
+    <h2>Connect With Us</h2>
+    <form action="https://formspree.io/f/xwkgenby" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
