--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+  <!-- BUBBLES ANIMATION (Background) -->
+  <div class="bubbles"></div>
+
   <!-- NAVIGATION BAR -->
   <header class="navbar">
     <div class="logo">🕊️ Wings Media</div>
