--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wings Media</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css"> <!-- Linking the style.css -->
 </head>
 <body>
-
-  <!-- BUBBLES ANIMATION (Background) -->
-  <div class="bubbles"></div>
+  <!-- Floating Bubbles -->
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
 
   <!-- NAVIGATION BAR -->
   <header class="navbar">
@@ -43,7 +46,6 @@
         <h3>Dinesh</h3>
         <p>Youth strategist. Thought-shaper of tomorrow.</p>
       </div>
-      <!-- Add more members as needed -->
     </div>
   </section>
 
@@ -82,6 +84,6 @@
     <p>© 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Linking the script.js -->
 </body>
 </html>
