--- a/index.html
+++ b/index.html
@@ -1,89 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wings Media</title>
-  <link rel="stylesheet" href="style.css"> <!-- Linking the style.css -->
+  <title>Interactive Bubble Background</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <!-- Floating Bubbles -->
-  <div class="bubble"></div>
-  <div class="bubble"></div>
-  <div class="bubble"></div>
-  <div class="bubble"></div>
-  <div class="bubble"></div>
 
-  <!-- NAVIGATION BAR -->
-  <header class="navbar">
-    <div class="logo">🕊️ Wings Media</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Articles</a>
-      <a href="#">Podcasts</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-
-  <!-- HERO SECTION -->
+  <!-- Hero Section -->
   <section class="hero">
     <h1>Welcome to <span>Wings Media</span></h1>
-    <p class="tagline">Empowering thoughts, Redefining Perspectives.</p>
+    <p class="tagline">Empowering creativity through technology</p>
   </section>
 
-  <!-- TEAM SECTION -->
+  <!-- Team Section -->
   <section class="team">
-    <h2>Meet Our Team</h2>
+    <h2>Our Team</h2>
     <div class="team-members">
       <div class="member-card">
-        <img src="team1.jpg" alt="Member 1">
-        <h3>Purushothaman</h3>
-        <p>Editor-in-Chief. Voice of truth and courage.</p>
+        <img src="team1.jpg" alt="Team Member 1">
+        <h3>John Doe</h3>
+        <p>CEO & Founder</p>
       </div>
       <div class="member-card">
-        <img src="team2.jpg" alt="Member 2">
-        <h3>Dinesh</h3>
-        <p>Youth strategist. Thought-shaper of tomorrow.</p>
+        <img src="team2.jpg" alt="Team Member 2">
+        <h3>Jane Smith</h3>
+        <p>Creative Director</p>
       </div>
+      <!-- Add more team members as needed -->
     </div>
   </section>
 
-  <!-- MISSION & VISION -->
+  <!-- Mission Section -->
   <section class="mission">
-    <h2>Our Mission & Vision</h2>
-    <p>
-      At Wings Media, we empower voices, uplift ideas, and challenge norms.
-      We envision a future where every mind is free to express with impact.
-    </p>
+    <h2>Our Mission</h2>
+    <p>We strive to provide the best services in the media industry.</p>
   </section>
 
-  <!-- NEW RELEASES -->
-  <section class="releases">
-    <h2>Check Out Our New Releases</h2>
-    <div class="cards">
-      <div class="card">🎙️ <strong>Freedom Voice</strong><br>Raw, bold political podcast.</div>
-      <div class="card">🧠 <strong>Youth Unfiltered</strong><br>Voices that inspire change.</div>
-      <div class="card">🌍 <strong>Ground Truth</strong><br>Real stories from real people.</div>
-    </div>
-  </section>
-
-  <!-- CONNECT WITH US -->
-  <section class="contact" id="contact">
-    <h2>Connect With Us</h2>
-    <form action="https://formspree.io/f/xwkgenby" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
-  <!-- FOOTER -->
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
+    <p>&copy; 2025 Wings Media. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script> <!-- Linking the script.js -->
+  <script src="script.js"></script>
 </body>
+
 </html>
