--- a/index.html
+++ b/index.html
@@ -1,44 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Wings Media</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-  <!-- Top Navbar -->
+  <!-- NAVIGATION BAR -->
   <header class="navbar">
-    <div class="nav-links">
-      <a href="about.html">About Us</a>
-      <a href="releases.html">Latest Releases</a>
-      <a href="podcasts.html">Podcasts</a>
-    </div>
-    <div class="logo">
-      <img src="211CC4E3-6156-4056-B8A2-E9BD91047B83.png" alt="WingsMedia Logo" />
-    </div>
-    <div class="nav-links">
-      <a href="articles.html">Articles</a>
-      <a href="contact.html">Connect</a>
-    </div>
+    <div class="logo">🕊️ Wings Media</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Articles</a>
+      <a href="#">Podcasts</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
-  <!-- Hero Section -->
+  <!-- HERO SECTION -->
   <section class="hero">
-    <canvas id="bgCanvas"></canvas>
-    <div class="hero-text">
-      <h1>Let Your Ideas Take Flight</h1>
-      <p>WingsMedia is a youth-powered media revolution — bringing bold voices, fresh takes, and fearless narratives to life.</p>
-      <a href="about.html" class="hero-button">Explore WingsMedia</a>
+    <h1>Welcome to <span>Wings Media</span></h1>
+    <p class="tagline">Empowering thoughts, Redefining Perspectives.</p>
+  </section>
+
+  <!-- TEAM SECTION -->
+  <section class="team">
+    <h2>Meet Our Team</h2>
+    <div class="team-members">
+      <div class="member-card">
+        <img src="team1.jpg" alt="Member 1">
+        <h3>Purushothaman</h3>
+        <p>Editor-in-Chief. Voice of truth and courage.</p>
+      </div>
+      <div class="member-card">
+        <img src="team2.jpg" alt="Member 2">
+        <h3>Dinesh</h3>
+        <p>Youth strategist. Thought-shaper of tomorrow.</p>
+      </div>
+      <!-- Add more members as needed -->
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© 2025 WingsMedia. All Rights Reserved.</p>
+  <!-- MISSION & VISION -->
+  <section class="mission">
+    <h2>Our Mission & Vision</h2>
+    <p>
+      At Wings Media, we empower voices, uplift ideas, and challenge norms.
+      We envision a future where every mind is free to express with impact.
+    </p>
+  </section>
+
+  <!-- NEW RELEASES -->
+  <section class="releases">
+    <h2>Check Out Our New Releases</h2>
+    <div class="cards">
+      <div class="card">🎙️ <strong>Freedom Voice</strong><br>Raw, bold political podcast.</div>
+      <div class="card">🧠 <strong>Youth Unfiltered</strong><br>Voices that inspire change.</div>
+      <div class="card">🌍 <strong>Ground Truth</strong><br>Real stories from real people.</div>
+    </div>
+  </section>
+
+  <!-- CONNECT WITH US -->
+  <section class="contact" id="contact">
+    <h2>Connect With Us</h2>
+    <form action="https://formspree.io/f/xwkgenby" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Wings Media. All rights reserved. Powered by truth & freedom.</p>
   </footer>
 
   <script src="script.js"></script>
